Address code review feedback
Signed-off-by: Craig Perkins <cwperx@amazon.com>